--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
           <div class="row align-items-center">
             <div class="col-lg-7 portfolio-info">
-              <h3>Hey, I'm Johan Stanworth</h3>
-              <p>Voluptatem sit minima et dignissimos earum fuga vel nulla quidem aut quam</p>
+              <h3>Hey, I'm Ryshaal</h3>
+              <p>I create things that inspire — whether it’s a clean web interface, a unique vector artwork, or atmospheric music. This portfolio is a glimpse into my creative journey. Let’s build something amazing together!</p>
             </div>
             <div class="col-lg-5 text-center text-lg-end">
               <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
